--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "classname": "^0.0.0",
@@ -25,6 +26,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.63.5",
+    "tippy.js": "^6.3.7",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
